[level 2] Title: [1차] 캐시, Time: 55.10 ms, Memory: 138 MB -BaekjoonHub